minor fix horizontal scroll

--- a/src/modules/app/routes/routes.scss
+++ b/src/modules/app/routes/routes.scss
@@ -4,6 +4,7 @@
   @include flex($align: stretch, $direction: column);
   @include footerMargin;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 .header {
